--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,5 +19,5 @@
   ],
   "userEnvProbe": "loginInteractiveShell",
   // Forward serial device to enable flash & monitor
-  "runArgs": ["--privileged"]
+  "runArgs": ["--privileged", "--device=/dev/ttyUSB0", "--device=/dev/ttyUSB1"]
 }
